--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -44,7 +44,8 @@ a.btncv:hover {
 
 p.location {
   font-size: 0.7rem;
-  white-space: nowrap;
+  white-space: normal;
+  word-wrap: break-word;
 }
 
 i.iconlocation {
